# djangoproject.com

./: .bowerrc  .coveragerc  .dockerignore  .editorconfig  .env  .git-blame-ignore-revs  .gitattributes  .gitignore  .pa11yci  .pre-commit-config.yaml  .prettierrc  .travis.yml  Dockerfile  Makefile  Procfile  README.rst  README.txt  TODO  bower.json  db.sqlite3  deploy-requirements.txt  do.sh  docker-compose.yml  docker-entrypoint.dev.sh  docker-entrypoint.prod.sh  docker-entrypoint.sh  eslint.config.cjs  fabfile.py  get_involved_solution.md  inputdemo.sh  local-requirements.txt  manage-docs.py  manage-www.py  manage.py  package-lock.json  package.json  pyproject.toml  renovate.json5  requirements.txt  ruff.toml  (+4 more)
.github/: SECURITY.md  dependabot.yml  issue_template.md  stale.yml
.github/ISSUE_TEMPLATE/: community_request.md  issue_template.md
.github/scripts/: confirm-release.sh
.github/workflows/: accessibility.yml  confirm-release.yml  docker-publish.yml  docker-test-build.yml  pre-commit.yml  prek.yml  preview-deploy.yml  tests-django-main.yml  tests.yml
.tx/: config
.well-known/: security.txt
_sphinx_13448_workaround/: apps.py
accounts/: admin.py  forms.py  hashers.py  models.py  profile_urls.py  test_admin.py  test_hashers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_migrate_sha1_passwords.py  0003_profile_bio.py  0004_profile_trac_username.py
aggregator/: admin.py  context_processors.py  feeds.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
aggregator/migrations/: 0001_initial.py  0002_add_feed_approver_auth_group.py  0003_increase_url_max_length.py  0004_add_approval_status_field.py  0004_add_local_django_community.py  0005_add_feed_approver_auth_group.py  0005_feeditem_add_index_date_modified.py  0006__del_field_feed_is_defunct.py  0006_localdjangocommunity_approval_status.py  0006_localdjangocommunity_plural.py
blog/: admin.py  feeds.py  forms.py  models.py  sitemaps.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_auto__add_field_entry_is_active.py  0002_event.py  0003_entry_content_format_markdown.py  0004_auto__add_field_entry_summary_html__add_field_entry_body_html.py  0004_imageupload.py  0005_entry_social_media_card.py  0006_entry_is_searchable.py  0007_remove_entry_is_searchable.py  0007_set_is_searchable.py  0008_alter_entry_is_searchable.py  0008_entry_is_searchable.py
blog/templatetags/: blog_extras.py  weblog.py
blog/tests/: __init__.py  test_forms.py  test_lazy_loading.py  test_models.py  test_views.py
checklists/: README.md  admin.py  apps.py  models.py  urls.py  views.py
checklists/migrations/: 0001_initial.py  0002_alter_securityissue_blogdescription_and_more.py  0003_alter_securityissue_blogdescription.py  (+6 more)
cla/: admin.py  models.py
config/: crontab  docs.wsgi  www.wsgi
contact/: forms.py  tests.py  urls.py  views.py
dashboard/: admin.py  models.py  tests.py  urls.py  utils.py  views.py
django_docs/: settings.py  urls.py  wsgi.py
django_ux/: base.css  index.html
django_website/: community_seed.json  context_processors.py  crontab  middleware.py  requirements.txt  settings.py  shortcuts.py  sitemaps.py  urls.py  views.py
django_www/: common_settings.py  heroku_wsgi.py  settings.py  staging_settings.py  urls.py  wsgi.py
djangodocs/: forms.py  models.py  settings.py  urls.py  views.py
djangoproject/: context_processors.py  hosts.py  middleware.py  sitemaps.py  test_markdownx.py  test_registration.py  tests.py  thumbnails.py  utils.py  views.py  wsgi.py
djangoproject_env/: pyvenv.cfg
docker-entrypoint-initdb.d/: 01_trac_db.sql  02_trac_schema.sh
docs/: admin.py  apps.py  builder.py  context_processors.py  forms.py  models.py  opensearch_integration.rst  search.py  search_indexes.py  search_sites.py  sitemaps.py  tests.py  urls.py  utils.py  views.py  views_debug.py
foundation/: admin.py  apps.py  feeds.py  forms.py  models.py  redirects.py  tests.py  urls.py  views.py
fundraising/: __init__.py  admin.py  admin_views.py  apps.py  exceptions.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
legacy/: tests.py  urls.py  views.py
media/: robots.txt
media/css/: base.css  (+3 more)
members/: admin.py  forms.py  models.py  test_admin.py  test_forms.py  test_management.py  test_migrations.py  test_models.py  test_templatetags.py  test_views.py  urls.py  utils.py  views.py
releases/: admin.py  context_processors.py  models.py  tests.py  urls.py  utils.py  views.py
requirements/: common.txt  dev.txt  prod.txt  tests.txt
scripts/: deploy-preview.sh
static/: robots.txt
svntogit/: mapping.py  tests.py  urls.py  views.py
templates/: 404.html  410.html  500.html  base.html  base_3col.html  base_blogroll.html  base_code.html  base_community.html  base_docs.html  base_download.html  base_foundation.html  base_weblog.html  code_of_conduct.html  donate_thanks.html  homepage.html  overview.html  start.html  styleguide.html
tools/: generate_release_roadmap.py  release-data.json  releases.json  template.svg.jinja
trac/: requirements.txt
tracdb/: db_router.py  models.py  stats.py  tests.py  testutils.py  trac.sql  tractime.py  urls.py  utils.py  views.py  wsgiauth.py
ux.dp.com/: base.css  index.html
wsgi-scripts/: docs.wsgi  svnauth.wsgi  www.wsgi
(+2690 files in other folders)
