[project]
name = "djangoproject-com"
version = "0.0.1"
description = "Source code to djangoproject.com"
# TODO: Check why this key causes black to generate trailing commas
requires-python = ">=3.12"
classifiers = [
    "Framework :: Django",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "babel==2.17.0",
    "django==6.0",
    "django-admin-dracula==0.0.3",
    "django-contact-form==5.2.0",
    "django-countries==8.2.0",
    "django-hosts==7.0.0",
    "django-money==3.5.4",
    "django-push @ git+https://github.com/brutasse/django-push.git@22fda99641cfbd2f3075a723d92652a8e38220a5",
    "django-read-only==1.21.0",
    "django-recaptcha==4.1.0",
    "django-registration-redux==2.13",
    "docutils==0.21.2",
    "feedparser==6.0.12",
    "jinja2==3.1.6",
    "libsass==0.23.0",
    "markdown==3.10",
    "pillow==12.1.0",
    "pygments==2.19.2",
    "pykismet3==0.1.1",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.5",
    "sorl-thumbnail==12.11.0",
    "sphinx==8.1.3",
    "stripe==13.2.0",
    "time-machine==3.2.0",
]

[dependency-groups]
dev = [
    "black==25.12.0",              # Used by Django's find_formatters and run_formatters
    "django-debug-toolbar==6.1.0",
    "prek==0.2.25",
    "psycopg[binary]==3.3.2",
    "watchdog==6.0.0",
]

prod = [
    "gunicorn==23.0.0",
    "psycopg[c]==3.3.2",
    "redis==7.1.0",
    "sentry-sdk==2.48.0",
]

# TODO: Consider merging with dev group
tests = [
    "coverage==7.13.1",
    "requests-mock==1.12.1",
    "tblib==3.2.1",
    { include-group = "dev" },
]

[tool.uv]
package = false
